--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "mongodb": "^2.2.5",
+    "mongoose": "^4.5.9",
     "socket.io": "^1.4.8"
   }
 }
