--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "validator": "^5.6.0"
   }
 }
