--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "crypto-js": "^3.1.6",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
